# fcitx-rime-config

./: .gitignore  CMakeLists.txt  README.md  fcitx-rime-config  note.md  run.sh
rimekit/: CMakeLists.txt
src/: CMakeLists.txt  Common.h  ConfigMain.cpp  ConfigMain.h  ConfigMain.ui  ConfigUtility.cpp  ConfigUtility.h  FRCU.ui  Main.cpp  Main.h  Model.cpp  Model.h  common.h  frcu.ui  main.cpp  main.h
src/fcitx-utils/: cutf8.cpp  cutf8.h  keynametable.h  keysym.h  keysymgen.h  macros.h  utf8.h
src/lib/: FcitxRimeConfig.c  FcitxRimeConfig.h  RimeConfig.cpp  RimeConfig.h
src/rime-utils/: FcitxRimeConfig.c  FcitxRimeConfig.h
